# SpicePy

./: .gitignore  pyproject.toml
demo/: VCCS_and_CCVS.py  VCVS_and_CCCS.py  ac_band_pass_filter.py  ac_low_high_pass_filter.py  ac_single_frequency.py  dc_network.py  op_network.py  tran_network1.py  tran_network2.py  tran_network3.py  tran_network4.py  tran_network5.py  tran_network6.py  tran_network7.py
spicepy/: netlist.py  netsolve.py  transient_sources.py
