[project]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

authors = [
  {name = "Luca Giaccone", email = "luca.giaccone@polito.it"},
]
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
]
description = "Circuit simulator written in Python"
license = {text = "MIT"}
name = "spicepy"
readme = "README.md"
requires-python = ">= 3.9"
version = "1.0.5"

[project.urls]
Homepage = "https://github.com/giaccone/SpicePy"
Wiki = "https://github.com/giaccone/SpicePy/wiki"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
spicepy = {path = ".", editable = true}

[tool.pixi.tasks]

[tool.pixi.dependencies]
matplotlib = ">=3.10.6,<4"
numpy = ">=2.3.2,<3"
python = ">=3.13.7,<3.14"
scipy = ">=1.16.1,<2"
